Mon Sep 18 19:44:08 2000  Christopher Faylor <cgf@cygnus.com>

	* fhandler_tty.cc (fhandler_tty_slave::write): Correct typo which
	caused resetting of windows error to ERROR_IO_DEVICE to be ignored.

Mon Sep 18 17:15:37 2000  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>

	* path.cc (mount_info::read_mounts): Don't delete mount entries of
	which mount points have the cygdrive prefix.
	* (mount_info::add_reg_mount): Properly catch errors on registry
	operations.
	* (mount_info::write_cygdrive_info_to_registry): Ditto.
	* (mount_info::del_reg_mount): Cosmetic changes to be consistent
	with other methods.
	* (mount_info::add_item): Check arguments more precisely.
	Increment nmounts only when registry operations succeed.

Sun Sep 17 22:18:39 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (interruptible): Return 0 if given an address in
	uncommitted memory.

2000-09-16  Egor Duda  <deo@logos-m.ru>

	* signal.cc (sleep): If interrupted by signal, return the
	requested time minus the time actually slept.

Fri Sep 15 22:30:40 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (handle_exceptions): Just "core dump" if SIGSEGV in signal thread.
	* external.cc (fillout_pinfo): Fix compiler warning.
	* sigproc.h: Eliminate special asm naming for sig_dispatch_pending.
	* sigproc.cc (sig_send): Remove debugging statements.

Wed Sep 13 14:56:47 2000  Christopher Faylor <cgf@cygnus.com>

	* spawn.cc (av): Hide 'calloced' field and limit cstrduping to class
	methods only.
	(spawn_guts): Use methods for manipulating most newargv stuff.

2000-09-13  Egor Duda  <deo@logos-m.ru>

	* child_info.h (child_info_spawn::~child_info_spawn): Avoid
	memory leaks in cygheap.
	* spawn.cc (spawn_guts): Ditto.

Wed Sep 13 14:28:03 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (quoted): Return next character after a quoted string when
	not doing special quote processing.  Also ensure that non-NULL is
	returned in all circumstances.
