@@ -36,6 +36,7 @@ enum path_types
   PATH_BINARY = MOUNT_BINARY,
   PATH_EXEC = MOUNT_EXEC,
   PATH_CYGWIN_EXEC = MOUNT_CYGWIN_EXEC,
+  PATH_NEEDDIR = 0x20000000,
   PATH_SOCKET =  0x40000000,
   PATH_HASACLS = 0x80000000
 };
